--- a/contact.html
+++ b/contact.html
@@ -105,63 +105,81 @@
     </div>
     <!-- Subpage Header End -->
 
-    <!-- Contact Form start -->
-    <div class="page-contact-form">
-        <div class="container">
-            <div class="row section-row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <h3 class="wow fadeInUp">fill the form</h3>
-                        <h2 class="text-anime-style-3">Contact Form</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <!-- Contact Form start -->
-                    <div class="contact-us-form wow fadeInUp" data-wow-delay="0.5s">
-                        <form id="contactForm" action="#" method="POST" data-toggle="validator">
-                            <div class="row">
-                                <div class="form-group col-md-6 mb-4">
-                                    <input type="text" name="name" class="form-control" id="name" placeholder="Enter Your Full Name" required>
-                                    <div class="help-block with-errors"></div>
-                                </div>
+    <!-- Footer Contact Form Start  -->
+	<div class="home-contact-form parallaxie">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<!-- Section Title Start -->
+					<div class="section-title">
+						<h3 class="wow fadeInUp">fill the form</h3>
+						<h2 class="text-anime-style-3">Contact Form.</h2>
+					</div>
+					<!-- Section Title End -->
+				</div>
+			</div>
 
-                                <div class="form-group col-md-6 mb-4">
-                                    <input type="email" name ="email" class="form-control" id="email" placeholder="Enter Your Email" required>
-                                    <div class="help-block with-errors"></div>
-                                </div>
+			<div class="row no-gutters">
+				<div class="col-lg-4 col-md-5 col-12">
+					<!-- Contact Appointment Start -->
+					<div class="contact-appointment">
+						<div class="appointment-img">
+							<img src="images/contact-us-img.png" alt="">
+						</div>
+						<div class="appointment-content">
+							<h3>Make <strong>Appointment </strong>& Take Care Of Your Healthy Life</h3>
+						</div>
+					</div>
+					<!-- Contact Appointment End -->
+				</div>
 
-                                <div class="form-group col-md-6 mb-4">
-                                    <input type="text" name="phone" class="form-control" id="phone" placeholder="Enter Your Phone Number" required>
-                                    <div class="help-block with-errors"></div>
-                                </div>
-                                
-                                <div class="form-group col-md-6 mb-4">
-                                    <input type="text" name="subject" class="form-control" id="subject" placeholder="Your Subject" required>
-                                    <div class="help-block with-errors"></div>
-                                </div>
+				<div class="col-lg-8 col-md-7 col-12">
+					<!-- Contact Form start -->
+					<div class="contact-form">
+						<form id="appointmentForm" action="#" method="POST" data-toggle="validator">
+							<div class="row">
+								<div class="form-group col-md-6 mb-4">
+									<input type="text" name="name" class="form-control" id="name" placeholder="Name"
+										required>
+									<div class="help-block with-errors"></div>
+								</div>
 
-                                <div class="form-group col-md-12 mb-4">
-                                    <textarea name="msg" class="form-control" id="msg" rows="4" placeholder="Typer Your Message" required></textarea>
-                                    <div class="help-block with-errors"></div>
-                                </div>
+								<div class="form-group col-md-6 mb-4">
+									<input type="email" name="email" class="form-control" id="email" placeholder="Email"
+										required>
+									<div class="help-block with-errors"></div>
+								</div>
 
-                                <div class="col-lg-12">
-                                    <div class="contact-form-btn">
-										<button type="submit" class="btn-default">book now</button>
-                                        <div id="msgSubmit" class="h3 hidden"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <!-- Contact Form end -->
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Contact Form End -->
+								<div class="form-group col-md-6 mb-4">
+									<input type="text" name="phone" class="form-control" id="phone"
+										placeholder="Your Phone" required>
+									<div class="help-block with-errors"></div>
+								</div>
+
+								<div class="form-group col-md-6 mb-4">
+									<input type="date" name="date" class="form-control" id="date" required>
+									<div class="help-block with-errors"></div>
+								</div>
+
+								<div class="form-group col-md-12 mb-4">
+									<textarea name="msg" class="form-control" id="msg" rows="4"
+										placeholder="Your Message" required></textarea>
+									<div class="help-block with-errors"></div>
+								</div>
+
+								<div class="col-md-12 form-group">
+									<button type="submit" class="btn-default">send</button>
+									<div id="msgSubmit" class="h3 hidden"></div>
+								</div>
+							</div>
+						</form>
+					</div>
+					<!-- Contact Form end -->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Footer Contact Form End -->
 
 	 <!-- Contact Infomation start -->
 	 <div class="contact-information wow fadeInUp" data-wow-delay="0.25s">
