--- a/services/digital-x-ray.html
+++ b/services/digital-x-ray.html
@@ -92,11 +92,11 @@
                 <div class="col-md-12">
                     <!-- Sub page Header start -->
                     <div class="subpage-header-box">
-                        <h1 class="text-anime-style-3">MRI Scan at S.B. Diagnostics</h1>
+                        <h1 class="text-anime-style-3">X-Ray Scan at S.B. Diagnostics</h1>
                         <ol class="breadcrumb wow fadeInUp">
                             <li><a href="../index.html">Home</a></li>
                             <li><a href="../services.html">services</a></li>
-                            <li>MRI Scan</li>
+                            <li>X-Ray Scan</li>
                         </ol>
                     </div>
                     
@@ -113,6 +113,9 @@
             <div class="row">
                 <div class="col-lg-8 col-md-7">
                     <div class="services-single-content">
+                        <div class="section-title">
+                            <h2 class="text-anime-style-3">X-Ray Scan</h2>
+                        </div>
                         <div class="service-featured-image">
                             <!-- Service Featured Image Start -->
                             <div class="service-video">
@@ -122,13 +125,13 @@
 
                                             <div class="carousel-inner">
                                               <div class="carousel-item active">
-                                                <img src="../images/images/6.jpg" class="d-block w-100 h-auto" alt="...">
+                                                <img src="../images/images/xray-1.jpg" class="d-block w-100 h-auto" alt="...">
                                               </div>
                                               <div class="carousel-item">
-                                                <img src="../images/images/7.jpg" class="d-block w-100 h-auto" alt="...">
+                                                <img src="../images/images/xray-2.jpg" class="d-block w-100 h-auto" alt="...">
                                               </div>
                                               <div class="carousel-item">
-                                                <img src="../images/images/8.jpg" class="d-block w-100 h-auto" alt="...">
+                                                <img src="../images/images/xray-3.jpg" class="d-block w-100 h-auto" alt="...">
                                               </div>
                                             </div>
                                            
