--- a/services/pathology.html
+++ b/services/pathology.html
@@ -113,6 +113,9 @@
             <div class="row">
                 <div class="col-lg-8 col-md-7">
                     <div class="services-single-content">
+                        <div class="section-title">
+                            <h2 class="text-anime-style-3">Digital Pathology</h2>
+                        </div>
                         <div class="service-featured-image">
                             <!-- Service Featured Image Start -->
                             <div class="service-video">
@@ -122,13 +125,13 @@
 
                                             <div class="carousel-inner">
                                               <div class="carousel-item active">
-                                                <img src="../images/images/6.jpg" class="d-block w-100 h-auto" alt="...">
+                                                <img src="../images/images/pathology-2.webp" class="d-block w-100 h-auto" alt="...">
                                               </div>
                                               <div class="carousel-item">
-                                                <img src="../images/images/7.jpg" class="d-block w-100 h-auto" alt="...">
+                                                <img src="../images/images/pathology-3.webp" class="d-block w-100 h-auto" alt="...">
                                               </div>
                                               <div class="carousel-item">
-                                                <img src="../images/images/8.jpg" class="d-block w-100 h-auto" alt="...">
+                                                <img src="../images/images/pathology-4.webp" class="d-block w-100 h-auto" alt="...">
                                               </div>
                                             </div>
                                            
